# Sublease-Gang

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  sublease-gang.yaml  sublease_marketplace.db
backend/scripts/: seed_colleges.py  seed_demo.py
backend/src/: sublease_marketplace.db
backend/src/app/: main.py
backend/src/app/core/: auth.py  database.py  dependencies.py  security.py  settings.py
backend/src/app/errors/: __init__.py  auth.py  conflict.py  not_found.py  permission.py  response.py  server.py  validation.py
backend/src/app/middleware/: __init__.py  body_size.py  logging.py  rate_limit.py  request_id.py  security_headers.py
backend/src/app/models/: __init__.py  college.py  conversations.py  crud.py  listing.py  messages.py  (+4 more)
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: README.md  conftest.py  test_crud.py  test_repository.py  test_routes_auth.py  test_routes_conversations.py  test_routes_listings.py  test_routes_users.py  test_schemas.py
backend/tests/integration/: test_middleware_body_size.py  test_routes_auth.py  test_routes_conversations.py  test_routes_listings.py  test_routes_map.py  test_routes_profile.py  test_routes_users.py
backend/tests/unit/: test_auth.py  test_auth_tokens.py  test_conversation_message_service.py  test_dependencies.py  test_email_service.py  test_listing_service.py  test_profile_service.py  test_rate_limit_resolver.py  test_repository.py  test_schemas.py  test_settings_validators.py  test_user_service.py
(+138 files in other folders)
